Bug 382354 - "Store alpha channel" checked and disabled when saving/exporting an image without alpha as png
Summary: "Store alpha channel" checked and disabled when saving/exporting an image wit...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Victor Wåhlström
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-14 22:11 UTC by Victor Wåhlström
Modified: 2017-07-17 13:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Victor Wåhlström 2017-07-14 22:11:02 UTC
The checkbox is correctly disabled, but it is also checked so it exports the png with an alpha channel despite the image not containing any transparency.

This could be because of previously saved values or defaults.

Steps to reproduce:
1. Create or open an image without any transparency
2. Export to PNG
Comment 1 Victor Wåhlström 2017-07-14 22:33:58 UTC
There are two ways to solve it:
1. Ensure the checkbox is never checked if it is also disabled, i.e. when the image has no transparency
2. Always enable the checkbox and let the user choose

I can't think of a reason why Krita should forbid saving PNGs with an alpha channel when there is no transparency. It might be wasteful, but if the PNG is going to be used in a program expecting RGBA it can also be required.
Comment 2 Victor Wåhlström 2017-07-15 12:13:31 UTC
Git commit bebbe66cce72cf5ca2f218381bb6d9ab394e64da by Victor Wåhlström.
Committed on 15/07/2017 at 12:08.
Pushed by victorw into branch 'master'.

PNG Export: Don't leave the alpha channel checkbox checked if it's disabled, and move the checkbox next to the transparency fill color widget.

Leaving it checked would force the creation of a PNG image with an alpha channel, even though the image has no transparency.

M  +4    -4    plugins/impex/png/kis_png_export.cc
M  +18   -18   plugins/impex/png/kis_wdg_options_png.ui

https://commits.kde.org/krita/bebbe66cce72cf5ca2f218381bb6d9ab394e64da
Comment 3 Victor Wåhlström 2017-07-15 12:14:55 UTC
(In reply to Victor Wåhlström from comment #1)
> There are two ways to solve it:
> 1. Ensure the checkbox is never checked if it is also disabled, i.e. when
> the image has no transparency
> 2. Always enable the checkbox and let the user choose
> 
> I can't think of a reason why Krita should forbid saving PNGs with an alpha
> channel when there is no transparency. It might be wasteful, but if the PNG
> is going to be used in a program expecting RGBA it can also be required.

Went with option 1 for now. Option 2 requires some UX considerations.
Comment 4 Victor Wåhlström 2017-07-17 13:10:21 UTC
Git commit 9c969b60fa290005105883dd048d316bc4e96f29 by Victor Wåhlström.
Committed on 17/07/2017 at 13:06.
Pushed by victorw into branch 'krita/3.2'.

Respect transparencyFillcolor configuration when exporting to jpeg or png without an alpha channel

And don't create an alpha channel in png files that has no transparency
Related: bug 382376

M  +29   -3    plugins/impex/jpeg/kis_jpeg_export.cc
M  +32   -7    plugins/impex/png/kis_png_export.cc
M  +18   -18   plugins/impex/png/kis_wdg_options_png.ui

https://commits.kde.org/krita/9c969b60fa290005105883dd048d316bc4e96f29