PNG Export: Don't leave the alpha channel checkbox checked if it's disabled, and move the checkbox next to the transparency fill color widget.

Leaving it checked would force the creation of a PNG image with an alpha channel, even though the image has no transparency.

BUG:382354